<resources>
    <string name="app_name">Intersection Safe</string>
    <string name="welcome">Welcome to the Intersection Safe App!</string>
    <string name="emailStr">Email</string>
    <string name="NameStr">Name</string>
    <string name="userNameStr">User Name</string>
    <string name="passwordStr">Password</string>
    <string name="sininBtn">Sign In!</string>
    <string name="reisterBtn">Register!</string>
    <string name="CPHTitle">Cars Per Hour: </string>
    <string name="NOCNtTitle">Number Of Cars Now: </string>
    <string name="TNOCTitle">Total Number Of Cars: </string>
    <string name="TETitle">Time Elapsed: </string>
    <string name="InterSectionSafeInf">Intersection Safe Info </string>
    <string name="HorTr">Horizantal Trafic </string>
    <string name="VerrTr">Vertical Trafic </string>
    <string name="OptimizedCStrH">Optimized Horizontal Cars </string>
    <string name="OptimizedCStrV">Optimized Vertical Cars </string>
    <string name="loginresendText">If you have already account? Sign In!</string>
    <string name="registerresendText">If you DO Not have account? Register!</string>

</resources>