<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/wallpaper"
    tools:context=".registerActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="437dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="439dp"
            android:background="@drawable/custom_edittext"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sininBtn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EmailAddressfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/email_logo"
                android:drawablePadding="8dp"
                android:hint="@string/emailStr"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/Passwordfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext"
                android:drawableLeft="@drawable/password_logo"
                android:drawablePadding="8dp"
                android:hint="@string/passwordStr"
                android:textColor="@color/black"
                android:padding="8dp"
                android:textSize="22sp" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/reisterBtn"
                android:id="@+id/registerBtn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/verte"
                app:cornerRadius ="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginResendText"
                android:text="@string/loginresendText"
                android:layout_gravity="center"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:textSize="22sp" />




        </LinearLayout>
    </androidx.cardview.widget.CardView>



</LinearLayout>