<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/wallpaper"
    tools:context=".SignInActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_edittext"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sininBtn"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/EmailAddressSignInfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/customize_input"
                android:drawableStart="@drawable/email_logo"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/emailStr"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/PasswordSignInfield"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/customize_input"
                android:drawableStart="@drawable/password_logo"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/passwordStr"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textSize="22sp"
                android:textColor="@color/black"
                />



            <Button
                android:id="@+id/SignInBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/verte"
                android:text="@string/sininBtn"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/resendTextToLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/registerresendText"
                android:textColor="@color/black"
                android:textSize="22sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>




</LinearLayout>