<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcomText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/welcome"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileImage"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/person_loge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomText"

        />

    <TextView
        android:id="@+id/UserNameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="User Name"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImage" />

    <TextView
        android:id="@+id/UserNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="User"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameProfile" />

    <LinearLayout
        android:id="@+id/lineraLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserNameTitle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:elevation="5dp"
                android:padding="10dp">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/InterSectionSafeInf"
                   android:textAlignment="center"
                   android:textColor="@color/lavander"
                   android:textSize="24sp"
                   android:textStyle="bold"
                   android:shadowColor="@color/verte"/>



            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CarPerHour"
                android:layout_weight="1"
                android:text="@string/CPHTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/lavander"/>

            <TextView
                android:id="@+id/CarPerHourfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Car/h"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavander"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberOfCarsNowId"
                android:layout_weight="1"
                android:text="@string/NOCNtTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/lavander"/>

            <TextView
                android:id="@+id/numberOfCarsNowfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Car"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavander"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberOfCarsTotal"
                android:layout_weight="1"
                android:text="@string/TNOCTitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/lavander"/>

            <TextView
                android:id="@+id/numberOfCarsTotalfield"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Car"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavander"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/TimeElapsed"
                android:layout_weight="1"
                android:text="@string/TETitle"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/lavander"/>

            <TextView
                android:id="@+id/TimeElapsedfiled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="h"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:textAlignment="viewEnd"/>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="10dp"
            android:alpha="0.5"
            android:background="@color/lavander"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>